# form

./: .gitignore  CHANGELOG.md  CMakeLists.txt  justfile  pyproject.toml  vcpkg.json
.github/: release-please-config.json
config/: 25.10.08_short_verify.yaml  25.10.15_inertial_test.yaml  25.10.15_test_planar.yaml  25.10.16_fixes.yaml  25.10.21_inertial_first_steps.yaml  25.10.22_inertial_debug.yaml  25.10.29_update_spires.yaml  25.10.31_prior_sweep.yaml  25.11.04_update_evalio.yaml  25.11.11_gravity_estimation.yaml  25.11.12_gravity_full.yaml  25.11.12_sigma_sweep.yaml  25.11.17_multi_campus.yaml  26.05.26_test_inertial.yaml
form/: form-inertial.cpp  form-inertial.hpp  form.cpp  utils.hpp
form/feature/: extraction.tpp
form/inertial/: imu.cpp  imu.hpp  init_factor.cpp  init_factor.hpp  timing.hpp
form/mapping/: keyscanner.hpp  map.hpp  map.tpp
form/optimization/: constraints.cpp  constraints.hpp  matcher.hpp
python/: CMakeLists.txt  bindings.cpp  boost_shared_ptr.h  gtsam_bindings.h
python/form/: __init__.py  multi_campus.py  oxford_spires.py
ros/: CMakeLists.txt  package.xml  pixi.toml
scripts/: bias_accel_estimation.py  bias_estimation.py  bias_form_estimation.py  bias_gyro_estimation.py  bias_jacobian_testing.py  bias_real_estimation.py  imu_sim.py  sym_gravity.py  view_integration.py
